Fix z-index bug for multi-book days

--- a/friendlog-web/src/app/calendar-view/calendar-view.component.scss
+++ b/friendlog-web/src/app/calendar-view/calendar-view.component.scss
@@ -1,8 +1,21 @@
 $calendar-day-size: 48px;
 
+$z-multi-color: 10;
+$z-end-of-book: 20;
+$z-number-and-dots: 30;
+
 table.calendar-view {
     margin-top: 24px;
     border-spacing: 0;
+
+    calendar-day-dots {
+        display: block;
+        width: $calendar-day-size;
+        text-align: center;
+        position: absolute;
+        bottom: 3px;
+        z-index: $z-number-and-dots;
+    }
     
     td.calendar-day {
         padding: 0;
@@ -24,7 +37,7 @@ table.calendar-view {
             height: $calendar-day-size - $downsize;
             border-radius: ($calendar-day-size - $downsize)/2;
             background: white;
-            z-index: 2;
+            z-index: $z-end-of-book;
             opacity: 0.5;
             content: '';
         }
@@ -37,14 +50,14 @@ table.calendar-view {
             width: 0px;
             border-top:48px solid red;
             border-right:48px solid yellow;
-            z-index: 1;
+            z-index: $z-multi-color;
         }
 
         .day-number {
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 3;
+            z-index: $z-number-and-dots;
             height: $calendar-day-size;
             width: $calendar-day-size;
             line-height: $calendar-day-size;
